--- a/src/index.css
+++ b/src/index.css
@@ -384,4 +384,138 @@ padding: 2rem 9.375rem;
   color: #1dbf73;
 }
 
-/* !========Education========= */
+/* !========Instructors========= */
+.instructors {
+  text-align: center;
+  padding: 50px;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  width: 250px;
+}
+
+.card img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+/* !========CTA========= */
+
+.cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  padding: 50px;
+  gap: 40px;
+  background-image: url(./assets/bg-overlay.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cta-left .layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); /* شفاف */
+  border-radius: 12px;
+}
+
+.cta-left img {
+  width: 21.875rem;
+  height: auto;
+  display: block;
+  border-radius: 10px;
+}
+
+.cta-right{
+    z-index: 100;
+}
+.cta-right h2 {
+  font-size: 28px;
+  margin-bottom: 15px;
+    color: #fff;
+}
+
+.cta-right p {
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.buttons {
+  display: flex;
+  gap: 15px;
+
+}
+
+.btn-green {
+  background: #28a745;
+  border: none;
+  padding: 12px 20px;
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.btn-outline {
+  border: 1px solid #28a745;
+  padding: 12px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  background: white;
+}
+
+/* !========Footer========= */
+.footer {
+  background: #111;
+  color: white;
+  padding: 40px;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.footer-links {
+  display: flex;
+  gap: 50px;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer-bottom input {
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  width: 250px;
+}
+
+.btn-green {
+  background: #28a745;
+  border: none;
+  padding: 12px 20px;
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
