--- a/src/Styles/Education.module.css
+++ b/src/Styles/Education.module.css
@@ -1,34 +1,36 @@
+.container {
+  padding: 0 1.25rem;
+  margin: 5rem auto;
+  max-width: 1200px;
+  width: 100%;
+}
 
 .education {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 3.125rem;
-  padding-right: 200px;
-  flex-wrap: wrap;
 }
 
-.education-img {
-  width: 40%;
-  padding: 0 50px;
+.educationImg {
+  width: 50%;
 }
 
-.education-img img {
+.educationImg img {
   width: 100%;
-  border-radius: 50px;
+  border-radius: 3.125rem;
 }
 
-.education-info h3 {
+.educationInfo h3 {
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 20px;
 }
 
-.education-info ul {
+.educationInfo ul {
   padding: 0;
 }
 
-.education-info li {
+.educationInfo li {
   list-style: none;
   display: flex;
   align-items: center;
@@ -36,7 +38,7 @@
   margin-bottom: 12px;
 }
 
-.icon-bg {
+.iconBg {
   background-color: #ddffff;
   color: #09b451;
   display: flex;
@@ -50,26 +52,26 @@
 @media (max-width: 480px) {
   .education {
     flex-direction: column;
-    padding: 20px; 
+    padding: 20px;
     gap: 1.5rem;
   }
 
-  .education-title {
+  .title {
     font-size: 14px;
     text-align: center;
   }
 
-  .education-img {
+  .educationImg {
     width: 100%;
     padding: 0;
   }
 
-  .education-img img {
+  .educationImg img {
     width: 100%;
     height: auto;
   }
 
-  .education-info h3 {
+  .educationInfo h3 {
     font-size: 1.5rem;
   }
 }
