--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -5,25 +5,30 @@
   font-family: Arial, sans-serif;
 }
 
-.footer-top {
+.container{
+  width: 100%;
+  max-width: 75rem;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.footerTop {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 20px;
 }
 
-.footer-brand {
-  flex: 1;
-  min-width: 250px;
+.footerBrand {
+  min-width: 18.75rem;
 }
 
-.footer-brand h2 {
+.footerBrand h2 {
   font-size: 24px;
   margin-bottom: 10px;
 }
 
-.footer-brand p {
+.footerBrand p {
   font-size: 14px;
   color: #ccc;
   margin-bottom: 15px;
@@ -34,50 +39,56 @@
   gap: 10px;
 }
 
-.socials a {
-  color: #fff;
-  text-decoration: none;
+.socials a{
+  font-size: 1.25rem;
+  color: #28a745;
 }
 
-.footer-links {
+.socials a:hover {
+  color: #ddffff;
+  text-decoration: none;
+  transform: scale(1.1);
+}
+
+.footerLinks {
   display: flex;
   justify-content: space-between;
-  flex: 2;
+  flex: 1;
   gap: 20px;
 }
 
-.footer-links ul {
+.footerLinks ul {
   list-style: none;
   padding: 0;
 }
 
-.footer-links li {
+.footerLinks li {
   margin-bottom: 10px;
 }
 
-.footer-links a {
+.footerLinks a {
   color: #ccc;
   text-decoration: none;
   font-size: 14px;
 }
 
-.footer-links a:hover {
+.footerLinks a:hover {
   color: #28a745;
 }
 
-.footer-bottom {
+.footerBottom {
   border-top: 1px solid #333;
   padding-top: 20px;
   text-align: center;
 }
 
-.footer-bottom form {
+.footerBottom form {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.footer-bottom input {
+.footerBottom input {
   padding: 10px;
   border: none;
   border-radius: 4px;
@@ -85,7 +96,7 @@
   width: 200px;
 }
 
-.footer-bottom .btn-green {
+.footerBottom .btnGreen {
   background: #28a745;
   border: none;
   padding: 10px 20px;
@@ -95,17 +106,17 @@
   font-size: 14px;
 }
 
-.footer-bottom .btn-green:hover {
+.footerBottom .btnGreen:hover {
   background: #218838;
 }
 
 @media (max-width: 768px) {
-  .footer-top {
+  .footerTop {
     flex-direction: column;
     text-align: center;
   }
 
-  .footer-links {
+  .footerLinks {
     flex-direction: column;
     text-align: left;
   }
