--- a/src/Styles/cources.module.css
+++ b/src/Styles/cources.module.css
@@ -6,7 +6,7 @@ align-items: center;
 padding: 2rem 9.375rem;
 }
 
-.swiper-container {
+.swiperContainer {
   position: relative;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -16,7 +16,7 @@ padding: 2rem 9.375rem;
   margin-bottom: 3.125rem;
 }
 
-.category-card {
+.categoryCard {
   position: relative;
   width: 290px;  
   height: 432px;  
@@ -28,18 +28,18 @@ padding: 2rem 9.375rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.category-card img {
+.categoryCard img {
   width: 100%;
   object-fit: cover;
   transition: 0.3s ease;
   display: block;
 }
 
-.category-card:hover img {
+.categoryCard:hover img {
   transform: scale(1.03);
 }
 
-.category-title {
+.categoryTitle {
   position: absolute;
   bottom: 1rem;
   left: 1rem;
@@ -49,7 +49,7 @@ padding: 2rem 9.375rem;
   text-shadow: 0 2px 6px rgba(0,0,0,0.5);
 }
 
-.nav-btn {
+.navBtn {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -69,21 +69,21 @@ padding: 2rem 9.375rem;
   font-size: 20px;
 }
 
-.nav-btn:hover {
+.navBtn:hover {
   background: #09b451;
   color: white;
 }
 
-.nav-btn.left {
+.navBtn.left {
   left: -60px; 
 }
 
-.nav-btn.right {
+.navBtn.right {
   right: -80px; 
 }
 
 
-.category-card .layer{
+.categoryCard .layer{
   background-color: #00000080;
   opacity: 50%;
   position: absolute;
@@ -93,24 +93,24 @@ padding: 2rem 9.375rem;
   height: 100%;
 }
 
-.see_all {
+.seeAll {
   text-decoration: none;
   color: #333333;
   font-size: 1.5rem;
   font-weight: 400;
 }
 
-@media (max-width: 480px) {
-  .category-card {
+@media (max-width: 768px) {
+  .categoryCard {
     flex: 0 0 100px;   
     height: auto;
   }
 
-  .category-title {
+  .categoryTitle {
     font-size: 1rem;
   }
 
-  .nav-btn{
+  .navBtn{
     display: none;
   }
 }
